@@ -40,12 +40,12 @@ GETTEXT_PACKAGE=AC_PACKAGE_NAME
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",[Package name for internationalization])
 
-LIBGLADE_REQUIRED_VERSION=2.0.0
+LIBGLADE_REQUIRED_VERSION=2.4.0
 GTKGLEXT_REQUIRED_VERSION=1.0.0
-GNOME_PRINT_REQUIRED_VERSION=2.2.0
-GNOME_VFS_REQUIRED_VERSION=2.0.0
-BONOBOUI_REQUIRED_VERSION=2.2.0
-LIBGNOMEUI_REQUIRED_VERSION=2.0.0
+GNOME_PRINT_REQUIRED_VERSION=2.4.0
+GNOME_VFS_REQUIRED_VERSION=2.4.0
+BONOBOUI_REQUIRED_VERSION=2.4.0
+LIBGNOMEUI_REQUIRED_VERSION=2.4.0
 
 gl_flags=
 gtkcrystalviewer="-lgtkcrystalviewer-0.3"
